# aioboard

./: README.md  pyproject.toml  requirements.txt  setup.cfg
aioboard/: __init__.py  aioboard.py  default.db
aioboard/utils/: web_app.py
aioboard/utils/routes/: another.py  bot.py  logger.py
aioboard/webapp/: package-lock.json  package.json  vite.config.js
aioboard/webapp/public/: fonts.css  index.html
aioboard/webapp/src/: App.jsx  index.js
aioboard/webapp/src/contexts/: ThemeContext.jsx
aioboard/webapp/src/layouts/: Sidebar.css  Sidebar.jsx
aioboard/webapp/src/pages/: Commands.css  Commsnds.jsx  Database.css  Database.jsx  Handlers.css  Handlers.jsx  Logger.css  Logger.jsx  Main.css  Main.jsx
