[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aioboard"
version = "0.1.1"
dependencies = [
    "aiogram",
    "aiosqlite",
    "python-dotenv",
    "flask",
    "importlib",
    "waitress",
    "netifaces",
    "hypercorn",
    "quart",
    "quart-cors"
    ]